--- a/.github/workflows/build-exes.yml
+++ b/.github/workflows/build-exes.yml
@@ -43,9 +43,7 @@ jobs:
         run: poetry config virtualenvs.in-project true
 
       - name: Install dependencies
-        run: |
-          poetry install --no-dev
-          poetry run pip install pyinstaller
+        run: poetry install --no-dev --extras "pyinstaller"
 
       - name: Get exectuable version name (non Windows)
         if: "!contains(matrix.os, 'windows')"
@@ -62,7 +60,7 @@ jobs:
           echo "vers=$vers" >> $env:GITHUB_ENV
 
       - name: Build with pyinstaller for ${{matrix.executable_os}}
-        run: poetry run pyinstaller hpcflow/cli.py --name=hpcflow-${{ env.vers }}-${{ matrix.executable_os }} --onefile
+        run: poetry run pyinstaller --name=hpcflow-${{ env.vers }}-${{ matrix.executable_os }} --onefile hpcflow/cli.py
 
       - if: contains(matrix.os, 'windows')
         run: tree /F /A
@@ -107,9 +105,7 @@ jobs:
           key: venv-CentOS-${{ hashFiles('**/poetry.lock') }}
 
       - name: Install dependencies
-        run: |
-          poetry install --no-dev
-          poetry run pip install pyinstaller
+        run: poetry install --no-dev --extras "pyinstaller"
 
       - name: Get exectuable version name
         run: |
@@ -119,7 +115,7 @@ jobs:
           echo "vers=$vers" >> $GITHUB_ENV
 
       - name: Build with pyinstaller for CentOS
-        run: poetry run pyinstaller hpcflow/cli.py --name=hpcflow-${{ env.vers }}-linux --onefile
+        run: poetry run pyinstaller --name=hpcflow-${{ env.vers }}-linux --onefile hpcflow/cli.py
 
       - uses: actions/upload-artifact@v2
         with:
