--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -320,7 +320,9 @@ jobs:
           binaryYaml=$(python3 -c "
           from pathlib import Path
           out_yaml = ''
-          for i in Path('release-artifacts').glob('*/hpcflow*'):
+          for i in Path('.').glob('**/hpcflow-${{ needs.bump-version.outputs.new_tag_name }}-*'):
+            if not any(i.name.endswith(j) for j in ['win.exe', 'macOS', 'linux']):
+              continue
             out_yaml += str(i.name) + ': https://github.com/hpcflow/hpcflow-new/releases/download/${{ needs.bump-version.outputs.new_tag_name }}'
             out_yaml += f'/{str(i.name)}\n'
           print(out_yaml)
