--- a/.github/workflows/vars.jsonc
+++ b/.github/workflows/vars.jsonc
@@ -8,8 +8,8 @@
     "bot_account_email": "hpcflow-actions@users.noreply.github.com",
     "token_name": "HPCFLOW_ACTIONS_TOKEN", // as defined within the `secrets` context: PAT of user who has push access and permission to bypass branch protection
     "pytest_args": "--verbose --exitfirst -k \"not task_schema and not task_template and not resolve_elements and not input_value and not action\"", // # disable failing tests while we set up CI
-    "PYPI_token_name": "TEST_PYPI", // as defined within the `secrets` context
-    "PYPI_URL": "https://test.pypi.org/legacy/",
+    "PYPI_token_name": "PYPI", // or "TEST_PYPI", as defined within the `secrets` context
+    "PYPI_URL": "https://upload.pypi.org/legacy/", // "https://test.pypi.org/legacy/",
     "executable_name": "hpcflow",
     "pyinstaller_package": "hpcflow/cli.py",
     "website_source_org": "hpcflow",
