--- a/.github/workflows/build-exes.yml
+++ b/.github/workflows/build-exes.yml
@@ -86,20 +86,24 @@ jobs:
           name: hpcflow-${{ env.vers }}-${{ matrix.executable_os }}-build
           path: build/hpcflow-${{ env.vers }}-${{ matrix.executable_os }}
 
-      - name: Basic executable test
+      - name: Basic executable test (windows)
         if: contains(matrix.os, 'windows')
         run: |
+          $tag = ${{ env.cur_tag }}
+          $tagNoV = $tag.trim('v')
           $hpcflow_vers = dist/hpcflow-${{ env.vers }}-${{ matrix.executable_os }}${{ matrix.executable_ext }} --version
-          $hpcflow_vers_expected = "hpcflow, version ${{ env.cur_tag }}"
+          $hpcflow_vers_expected = "hpcflow, version $tagNoV"
           echo $hpcflow_vers
           echo $hpcflow_vers_expected
           $vers -eq $hpcflow_vers_expected
 
-      - name: Basic executable test
+      - name: Basic executable test (non-windows)
         if: "!contains(matrix.os, 'windows')"
         run: |
+          tag=${{ env.cur_tag }}
+          tagNoV=${tag:1}
           hpcflow_vers=$(dist/hpcflow-${{ env.vers }}-${{ matrix.executable_os }}${{ matrix.executable_ext }} --version)
-          hpcflow_vers_expected="hpcflow, version ${{ env.cur_tag }}"
+          hpcflow_vers_expected="hpcflow, version $tagNoV"
           echo $hpcflow_vers
           [ $vers = $hpcflow_vers_expected ]
 
@@ -156,7 +160,9 @@ jobs:
 
       - name: Basic executable test
         run: |
-          hpcflow_vers=$(dist/hpcflow-${{ env.vers }}-${{ matrix.executable_os }}${{ matrix.executable_ext }} --version)
-          hpcflow_vers_expected="hpcflow, version ${{ env.cur_tag }}"
+          tag=${{ env.cur_tag }}
+          tagNoV=${tag:1}
+          hpcflow_vers=$(dist/hpcflow-${{ env.vers }}-linux --version)
+          hpcflow_vers_expected="hpcflow, version $tagNoV"
           echo $hpcflow_vers
           [ $vers = $hpcflow_vers_expected ]
