--- a/.github/workflows/build-exes.yml
+++ b/.github/workflows/build-exes.yml
@@ -105,7 +105,7 @@ jobs:
           hpcflow_vers=$(dist/hpcflow-${{ env.vers }}-${{ matrix.executable_os }}${{ matrix.executable_ext }} --version)
           hpcflow_vers_expected="hpcflow, version $tagNoV"
           echo $hpcflow_vers
-          [ $vers = $hpcflow_vers_expected ]
+          [ "$hpcflow_vers" = "$hpcflow_vers_expected" ]
 
   build-executables-linux:
     runs-on: ubuntu-latest
@@ -165,4 +165,4 @@ jobs:
           hpcflow_vers=$(dist/hpcflow-${{ env.vers }}-linux --version)
           hpcflow_vers_expected="hpcflow, version $tagNoV"
           echo $hpcflow_vers
-          [ $vers = $hpcflow_vers_expected ]
+          [ "$hpcflow_vers" = "$hpcflow_vers_expected" ]
