--- a/.github/workflows/build-exes.yml
+++ b/.github/workflows/build-exes.yml
@@ -164,7 +164,7 @@ jobs:
           tag=${{ env.cur_tag }}
           tagNoV=${tag:1}
           hpcflow_vers=$(dist/hpcflow-${{ env.vers }}-linux --version)
-          hpcflow_vers_expected="hpcflow, version $tagNoV"
+          hpcflow_vers_expected="hpcflow, version $tagNoV hello"
           echo $hpcflow_vers
           echo $hpcflow_vers_expected
-          [ "$hpcflow_vers" = "$hpcflow_vers_expected"abc ]
+          [ "$hpcflow_vers" = "$hpcflow_vers_expected" ]
