--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -184,7 +184,7 @@ jobs:
         run: poetry install --no-dev --extras "pyinstaller"
 
       - name: Build with pyinstaller for ${{ matrix.executable_os }}
-        run: poetry run pyinstaller --name=hpcflow-${{ needs.bump-version.outputs.new_tag_name }}-${{ matrix.executable_os }} --onefile hpcflow/cli.py
+        run: poetry run pyinstaller --name=hpcflow-${{ needs.bump-version.outputs.new_tag_name }}-${{ matrix.executable_os }} --onefile hpcflow/cli/__init__.py
 
       - name: Upload executable artifact
         uses: actions/upload-artifact@v2
@@ -251,7 +251,7 @@ jobs:
         run: poetry install --no-dev --extras "pyinstaller"
 
       - name: Build with pyinstaller for CentOS
-        run: poetry run pyinstaller --name=hpcflow-${{ needs.bump-version.outputs.new_tag_name }}-linux --onefile hpcflow/cli.py
+        run: poetry run pyinstaller --name=hpcflow-${{ needs.bump-version.outputs.new_tag_name }}-linux --onefile hpcflow/cli/__init__.py
 
       - name: Upload executable artifact
         uses: actions/upload-artifact@v2
