--- a/.github/workflows/vars.jsonc
+++ b/.github/workflows/vars.jsonc
@@ -11,7 +11,7 @@
     "PYPI_token_name": "PYPI", // or "TEST_PYPI", as defined within the `secrets` context
     "PYPI_URL": "https://upload.pypi.org/legacy/", // "https://test.pypi.org/legacy/",
     "executable_name": "hpcflow",
-    "pyinstaller_package": "hpcflow/cli/__init__.py",
+    "pyinstaller_package": "hpcflow/cli/cli.py",
     "website_source_org": "hpcflow",
     "website_source_repo": "hpcflow.github.io",
     "website_source_token_name": "HPCFLOW_ACTIONS_TOKEN" // as defined within the `secrets` context: PAT of user who has push access and permission to bypass branch protection
