--- a/.github/workflows/build-exes.yml.in
+++ b/.github/workflows/build-exes.yml.in
@@ -66,7 +66,7 @@ jobs:
           echo "vers=$vers" >> $env:GITHUB_ENV
 
       - name: Build with pyinstaller for {% raw %}${{ matrix.executable_os }}{% endraw %}
-        run: poetry run pyinstaller --name={{ executable_name }}-{% raw %}${{ env.vers }}-${{ matrix.executable_os }}{% endraw %} --onefile {{ pyinstaller_package }}
+        run: poetry run pyinstaller --clean -y --name={{ executable_name }}-{% raw %}${{ env.vers }}-${{ matrix.executable_os }}{% endraw %} --onefile {{ pyinstaller_package }}
 
       - name: Upload executable artifact
         uses: actions/upload-artifact@v2
@@ -141,7 +141,7 @@ jobs:
           echo "vers=$vers" >> $GITHUB_ENV
 
       - name: Build with pyinstaller for CentOS
-        run: poetry run pyinstaller --name={{ executable_name }}-{% raw %}${{ env.vers }}{% endraw %}-linux --onefile {{ pyinstaller_package }}
+        run: poetry run pyinstaller --clean -y --name={{ executable_name }}-{% raw %}${{ env.vers }}{% endraw %}-linux --onefile {{ pyinstaller_package }}
 
       - name: Upload executable artifact
         uses: actions/upload-artifact@v2
