--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -91,6 +91,7 @@ jobs:
           poetry run python -m pytest --verbose --exitfirst -k "not task_schema and not task_template and not resolve_elements and not input_value and not action"
 
   test-CentOS:
+    needs: pre-commit
     runs-on: ubuntu-latest
     container:
       image: aplowman/centos7-poetry
