--- a/.github/workflows/build-exes.yml
+++ b/.github/workflows/build-exes.yml
@@ -66,7 +66,28 @@ jobs:
           echo "vers=$vers" >> $env:GITHUB_ENV
 
       - name: Build with pyinstaller for ${{ matrix.executable_os }}
-        run: poetry run pyinstaller --clean -y --name=hpcflow-${{ env.vers }}-${{ matrix.executable_os }} --onefile hpcflow/cli/cli.py
+        if: "!contains(matrix.os, 'windows')"
+        run: |
+          poetry run pyinstaller \
+            --clean -y \
+            --name=hpcflow-${{ env.vers }}-${{ matrix.executable_os }} \
+            --onefile \
+            --hidden-import "hpcflow.data" \
+            --add-data "hpcflow/data/config_file_schema.yaml:hpcflow/data" \
+            --add-data "hpcflow/data/config_schema.yaml:hpcflow/data" \
+            hpcflow/cli/cli.py
+
+      - name: Build with pyinstaller for ${{ matrix.executable_os }}
+        if: contains(matrix.os, 'windows')
+        run: |
+          poetry run pyinstaller `
+            --clean -y `
+            --name=hpcflow-${{ env.vers }}-${{ matrix.executable_os }} `
+            --onefile `
+            --hidden-import "hpcflow.data" `
+            --add-data "hpcflow/data/config_file_schema.yaml;hpcflow/data" `
+            --add-data "hpcflow/data/config_schema.yaml;hpcflow/data" `
+            hpcflow/cli/cli.py
 
       - name: Upload executable artifact
         uses: actions/upload-artifact@v2
@@ -145,7 +166,15 @@ jobs:
           echo "vers=$vers" >> $GITHUB_ENV
 
       - name: Build with pyinstaller for CentOS
-        run: poetry run pyinstaller --clean -y --name=hpcflow-${{ env.vers }}-linux --onefile hpcflow/cli/cli.py
+        run: |
+          poetry run pyinstaller \
+            --clean -y \
+            --name=hpcflow-${{ env.vers }}-linux \
+            --onefile \
+            --hidden-import "hpcflow.data" \
+            --add-data "hpcflow/data/config_file_schema.yaml:hpcflow/data" \
+            --add-data "hpcflow/data/config_schema.yaml:hpcflow/data" \
+            hpcflow/cli/cli.py
 
       - name: Upload executable artifact
         uses: actions/upload-artifact@v2
@@ -165,7 +194,7 @@ jobs:
           name: hpcflow-${{ env.vers }}-linux-build
           path: build/hpcflow-${{ env.vers }}-linux
 
-      - name: Basic executable test
+      - name: Version check
         run: |
           tag=${{ env.cur_tag }}
           tagNoV=${tag:1}
@@ -174,3 +203,7 @@ jobs:
           echo $hpcflow_vers
           echo $hpcflow_vers_expected
           [ "$hpcflow_vers" = "$hpcflow_vers_expected" ]
+
+      - name: Basic CLI checks
+        run: |
+          dist/hpcflow-${{ env.vers }}-linux config get --all
