--- a/.github/workflows/build-exes.yml
+++ b/.github/workflows/build-exes.yml
@@ -65,54 +65,40 @@ jobs:
           echo "vers is: $vers"
           echo "vers=$vers" >> $env:GITHUB_ENV
 
-      - name: Build with pyinstaller for ${{ matrix.executable_os }}
+      - name: Build with pyinstaller (non Windows)
         if: "!contains(matrix.os, 'windows')"
-        run: |
-          poetry run pyinstaller \
-            --clean -y \
-            --name=hpcflow-${{ env.vers }}-${{ matrix.executable_os }} \
-            --onefile \
-            --hidden-import "hpcflow.data" \
-            --add-data "hpcflow/data/config_file_schema.yaml:hpcflow/data" \
-            --add-data "hpcflow/data/config_schema.yaml:hpcflow/data" \
-            hpcflow/cli/cli.py
+        working-directory: pyinstaller
+        run: ./make.sh hpcflow-${{ env.vers }}-${{ matrix.executable_os }}
 
-      - name: Build with pyinstaller for ${{ matrix.executable_os }}
+      - name: Build with pyinstaller (Windows)
         if: contains(matrix.os, 'windows')
-        run: |
-          poetry run pyinstaller `
-            --clean -y `
-            --name=hpcflow-${{ env.vers }}-${{ matrix.executable_os }} `
-            --onefile `
-            --hidden-import "hpcflow.data" `
-            --add-data "hpcflow/data/config_file_schema.yaml;hpcflow/data" `
-            --add-data "hpcflow/data/config_schema.yaml;hpcflow/data" `
-            hpcflow/cli/cli.py
+        working-directory: pyinstaller
+        run: ./make.ps1 -ExeName "hpcflow-${{ env.vers }}-${{ matrix.executable_os }}"
 
       - name: Upload executable artifact
         uses: actions/upload-artifact@v2
         with:
           name: hpcflow-${{ env.vers }}-${{ matrix.executable_os }}${{ matrix.executable_ext }}
-          path: dist/hpcflow-${{ env.vers }}-${{ matrix.executable_os }}${{ matrix.executable_ext }}
+          path: pyinstaller/dist/hpcflow-${{ env.vers }}-${{ matrix.executable_os }}${{ matrix.executable_ext }}
 
       - name: Upload spec file
         uses: actions/upload-artifact@v2
         with:
           name: hpcflow-${{ env.vers }}-${{ matrix.executable_os }}.spec
-          path: hpcflow-${{ env.vers }}-${{ matrix.executable_os }}.spec
+          path: pyinstaller/hpcflow-${{ env.vers }}-${{ matrix.executable_os }}.spec
 
       - name: Upload build directory
         uses: actions/upload-artifact@v2
         with:
           name: hpcflow-${{ env.vers }}-${{ matrix.executable_os }}-build
-          path: build/hpcflow-${{ env.vers }}-${{ matrix.executable_os }}
+          path: pyinstaller/build/hpcflow-${{ env.vers }}-${{ matrix.executable_os }}
 
       - name: Version check (windows)
         if: contains(matrix.os, 'windows')
         run: |
           $tag = "${{ env.cur_tag }}"
           $tagNoV = $tag.trim('v')
-          $hpcflow_vers = dist/hpcflow-${{ env.vers }}-${{ matrix.executable_os }}${{ matrix.executable_ext }} --version
+          $hpcflow_vers = pyinstaller/dist/hpcflow-${{ env.vers }}-${{ matrix.executable_os }}${{ matrix.executable_ext }} --version
           $hpcflow_vers_expected = "hpcflow, version $tagNoV"
           echo $hpcflow_vers
           echo "$hpcflow_vers_expected"
@@ -125,7 +111,7 @@ jobs:
         run: |
           tag=${{ env.cur_tag }}
           tagNoV=${tag:1}
-          hpcflow_vers=$(dist/hpcflow-${{ env.vers }}-${{ matrix.executable_os }}${{ matrix.executable_ext }} --version)
+          hpcflow_vers=$(pyinstaller/dist/hpcflow-${{ env.vers }}-${{ matrix.executable_os }}${{ matrix.executable_ext }} --version)
           hpcflow_vers_expected="hpcflow, version $tagNoV"
           echo $hpcflow_vers
           echo $hpcflow_vers_expected
@@ -133,7 +119,7 @@ jobs:
 
       - name: Basic CLI checks
         run: |
-          dist/hpcflow-${{ env.vers }}-${{ matrix.executable_os }}${{ matrix.executable_ext }} config get --all
+          pyinstaller/dist/hpcflow-${{ env.vers }}-${{ matrix.executable_os }}${{ matrix.executable_ext }} config get --all
 
   build-executables-linux:
     runs-on: ubuntu-latest
@@ -166,39 +152,32 @@ jobs:
           echo "vers=$vers" >> $GITHUB_ENV
 
       - name: Build with pyinstaller for CentOS
-        run: |
-          poetry run pyinstaller \
-            --clean -y \
-            --name=hpcflow-${{ env.vers }}-linux \
-            --onefile \
-            --hidden-import "hpcflow.data" \
-            --add-data "hpcflow/data/config_file_schema.yaml:hpcflow/data" \
-            --add-data "hpcflow/data/config_schema.yaml:hpcflow/data" \
-            hpcflow/cli/cli.py
+        working-directory: pyinstaller
+        run: ./make.sh hpcflow-${{ env.vers }}-linux
 
       - name: Upload executable artifact
         uses: actions/upload-artifact@v2
         with:
           name: hpcflow-${{ env.vers }}-linux
-          path: dist/hpcflow-${{ env.vers }}-linux
+          path: pyinstaller/dist/hpcflow-${{ env.vers }}-linux
 
       - name: Upload spec file
         uses: actions/upload-artifact@v2
         with:
           name: hpcflow-${{ env.vers }}-linux.spec
-          path: hpcflow-${{ env.vers }}-linux.spec
+          path: pyinstaller/hpcflow-${{ env.vers }}-linux.spec
 
       - name: Upload build directory
         uses: actions/upload-artifact@v2
         with:
           name: hpcflow-${{ env.vers }}-linux-build
-          path: build/hpcflow-${{ env.vers }}-linux
+          path: pyinstaller/build/hpcflow-${{ env.vers }}-linux
 
       - name: Version check
         run: |
           tag=${{ env.cur_tag }}
           tagNoV=${tag:1}
-          hpcflow_vers=$(dist/hpcflow-${{ env.vers }}-linux --version)
+          hpcflow_vers=$(pyinstaller/dist/hpcflow-${{ env.vers }}-linux --version)
           hpcflow_vers_expected="hpcflow, version $tagNoV"
           echo $hpcflow_vers
           echo $hpcflow_vers_expected
@@ -206,4 +185,4 @@ jobs:
 
       - name: Basic CLI checks
         run: |
-          dist/hpcflow-${{ env.vers }}-linux config get --all
+          pyinstaller/dist/hpcflow-${{ env.vers }}-linux config get --all
