fix: actions workflow

--- a/.github/workflows/build-exes.yml
+++ b/.github/workflows/build-exes.yml
@@ -5,10 +5,11 @@ env:
 
 on:
   workflow_dispatch:
-    logLevel:
-      description: "PyInstaller log level"
-      required: true
-      default: "INFO"
+    inputs:
+      logLevel:
+        description: "PyInstaller log level"
+        required: true
+        default: "INFO"
 
 jobs:
   build-executables:
